...
fun HomeNewsBlock(
    news: News,
    navigateToNewsDetail: (Int) -> Unit = {},
) {
    Column(modifier = Modifier
        .padding(bottom = 20.dp)
        .testTag("home_news_block")
        .clickable {
            navigateToNewsDetail(news.id)
        }) {
        AsyncImage(
            model = news.detailPost?.image ?: "",
            contentDescription = "Thumbnail",
...

@Composable
fun HomeNewsBlockSkeletonView() {
    val boxModifier = Modifier.clip(MaterialTheme.shapes.medium)
    Column(modifier = Modifier
        .padding(bottom = 20.dp)
        .testTag("home_skeleton_view")) {
        Box(
            modifier = Modifier
                .fillMaxWidth()
                .height(200.dp)
                .background(shimmerBrush())
        )
...
